date selection and styling

--- a/templates/add_habit.html
+++ b/templates/add_habit.html
@@ -2,6 +2,7 @@
 
 {% block main_content %} 
     <form class="form" method="POST">
-
+        <textarea class="form_input" name="habit" id="habit" cols="30" rows="10" placeholder="Add a new daily habit"></textarea>
+        <button type="submit" class="form_button">Add</button>
     </form>
 {% endblock %}
