--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,13 @@
 {% extends "layout.html" %} 
 
 {% block main_content %} 
-    <section>
-        {{ habits }}
+    <section class="habit_list">
+        {% for habit in habits %} 
+            <div class="habit">
+                <p class="habit_name">
+                    {{ habit }}
+                </p>
+            </div>
+        {% endfor %}
     </section>
 {% endblock %}
